# wcmkts_north

./: .coveragerc  .gitignore  AGENTS.md  CLAUDE.md  DOCUMENTATION_MIGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_SUMMARY.md  app.py  build_catagories.csv  build_commodity_groups.csv  build_cost.db  build_cost.db-shm  build_cost.db-wal  build_cost_models.py  config.py  db_handler.py  db_utils.py  doctrines.py  example_test_run.py  init_db.py  jita_optimization_migration.md  last_sync_state.json  logging_config.py  market_metrics.py  models.py  pyproject.toml  run_tests.py  sdemodels.py  set_targets.py  settings.toml  ship_roles_migration.md  sync_scheduler.py  sync_state.py  type_info.py  utils.py  wc_northern_supply_targets.csv  wcmkt.db-client_wal_index  wcmkt.db-shm  wcmkt.db-wal
.streamlit/: config.toml
docs/: concurrency_refactor.md  database_config.md  testing.md  worktree_setup.md
pages/: __init__.py  build_costs.py  doctrine_report.py  doctrine_status.py  low_stock.py  market_stats.py
tests/: __init__.py  conftest.py  test.py  test_clean_mkt_data.py  test_database_config_concurrency.py  test_fetch_industry_indices.py  test_get_all_market_history.py  test_get_all_mkt_orders.py  test_get_fitting_data.py  test_get_market_history.py  test_logging_config.py  test_runner.py  test_rwlock.py  test_safe_format.py  test_ship_role_categorization.py
tests/pages/: __init__.py
